k8s/apps/media/flood/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: flood-service
  namespace: media
spec:
  selector:
    app: flood
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
