k8s/apps/media/flood/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: flood-ingress
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`downloads.media.armleth.fr`) && PathPrefix(`/outpost.goauthentik.io/`)
      kind: Rule
      priority: 15
      services:
        - name: authentik-server
          namespace: authentik
          port: 80
    - match: Host(`downloads.media.armleth.fr`)
      kind: Rule
      priority: 10
      services:
        - name: flood-service
          port: 3000
      middlewares:
        - name: authentik-forward-auth
          namespace: authentik
  tls:
    secretName: flood-tls-secret
